Fix table being slightly too wide sometimes; move score computation to model

--- a/public/style.css
+++ b/public/style.css
@@ -93,6 +93,7 @@ tbody td {
 
 td {
   height: 32px;
+  padding-left: 0px;
 }
 
 thead td.selected {
